# react-native-mecab

./: .release-it.json  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md  lefthook.yml  package.json  react-native-mecab.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativemecab/: MecabModule.java  MecabPackage.java
cpp/: react-native-mecab.cpp  react-native-mecab.h
example/: index.tsx  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativemecab/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/assets/ipadic/: unk.dic
example/android/app/src/main/java/com/example/reactnativemecab/: MainActivity.java  MainApplication.java
example/android/app/src/main/jni/: MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/MecabExample/: LaunchScreen.storyboard
example/ios/MecabExample.xcodeproj/: project.pbxproj
example/ios/MecabExample.xcodeproj/xcshareddata/xcschemes/: MecabExample.xcscheme
example/ios/MecabExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Mecab.h  Mecab.mm
ios/Mecab.xcodeproj/: project.pbxproj
src/: index.ts  index.tsx  mecab.ts  use-mecab.ts
src/__tests__/: mecab.test.ts
(+3 files in other folders)
